# danceiq

./: .gitignore  README.md  README.txt  bun.lockb  package.json
_service/source/: CMakeLists.txt  build.sh  installer.sh  main.cpp
service/: CmakeLists.txt  README.md  build.sh  cmake-preset-default.sh  manifest  repositories.manifest  vcpkg.json
service/builds/: CMakeCache.txt  DanceIQ  Makefile  cmake_install.cmake
service/danceiq/: .gitignore  buildfile
service/source/: CMakeLists.txt  index.cpp  main.cpp
service/source/classes/: socket.cpp
service/source/includes/: bounded_vector.cpp  bounded_vector.h  socket_handlers.cpp  socket_handlers.h  tf_utils.cpp  utils.h
shared/: event_map.ts  event_map.txt
web/: bun.lockb  package.json  postcss.config.js
web/css-obfuscator/: main.json
web/src/: config.ts
web/src/components/context-menu/: context-menu.tsx
web/src/components/footer/: footer.tsx
web/src/components/video-preview/: video-preview.tsx
web/src/components/viewer/: viewer.tsx
web/src/components/welcome-dialog/: welcome-dialog.tsx
web/src/pages/: _app.tsx  _document.tsx  index.tsx  library.tsx
web/src/styles/: globals.css
web/src/types/: events-map.ts
web/src/utils/: frame.tsx  get-media.tsx  library.tsx
web/src/zustand/: media-feed.ts  socket.ts  welcome.ts
